services/demo-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demo-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: demo-api

  template:
    metadata:
      labels:
        app: demo-api

    spec:
      containers:
      - name: demo-api
        image: mykaelhunter/demo-api:latest

        ports:
        - containerPort: 8000
