services/demo-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: demo-api

spec:

  rules:

  - host: demo-api.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: demo-api

            port:

              number: 80
